tests/baselines/reference/genericGetter2.errors.txt
tests/cases/compiler/genericGetter2.ts(5,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/genericGetter2.ts(5,14): error TS2314: Generic type 'A<T>' requires 1 type argument(s).


==== tests/cases/compiler/genericGetter2.ts (2 errors) ====
    class A<T> { }
    
    class C<T> {
        data: A<T>;
        get x(): A {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                 ~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).
            return this.data;
        }
    }